Fix input search styling problem on Safari

--- a/demo/style.css
+++ b/demo/style.css
@@ -36,6 +36,10 @@ img:not([src$=".svg"]) {
 img[src$=".svg"] {
   width: 100%;
 }
+/* fix input no style on Safari */
+input[type="search"] {
+  -webkit-appearance: textfield;
+}
 button,
 input,
 select,
