--- a/less/1-core/_01-reset.less
+++ b/less/1-core/_01-reset.less
@@ -42,6 +42,11 @@ img[src$=".svg"] {
   width: 100%;
 }
 
+/* fix input no style on Safari */
+input[type="search"] {
+  -webkit-appearance: textfield;
+}
+
 button,
 input,
 select,
